fix: rota raiz para Render health check + URL correta do backend
- Adicionou GET / retornando JSON (evita erro 'Rota nao encontrada' no Render)
- Atualizou VITE_API_URL para URL real do Render (portfolio-profissional-dvlh)
- Atualizou GitHub Actions workflow com URL correta

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -38,7 +38,7 @@ jobs:
         working-directory: frontend
         run: npm run build
         env:
-          VITE_API_URL: https://portfolio-api.onrender.com
+          VITE_API_URL: https://portfolio-profissional-dvlh.onrender.com
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
