--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Produção — URL completa do backend no Render
-VITE_API_URL=https://portfolio-api.onrender.com
+VITE_API_URL=https://portfolio-profissional-dvlh.onrender.com
